<resources>
    <string name="app_name">My Application1</string>
    <string name="hi">ПРИВЕТ</string>
    <string name="nije">Наслаждайся отборочными. \n Будь внимателен. \nДелай хорошо.</string>
    <string name="yesorno">Ещё нет аккаунта?</string>
    <string name="acc">Bойти в аккаунт</string>
    <string name="login">Зарегистрируйтесь</string>
    <string name="signin">Sign in</string>
    <string name="b1">Sign in</string>
    <string name="b2">Профиль</string>
    <string name="reg">Register</string>
    <string name="edit1">Email</string>
    <string name="edit2">Пароль</string>
    <string name="registration">Тут будет \nрегистрация</string>
    <string name="hello">С возвращением, Эмиль!</string>
    <string name="howdoyoydo">Каким ты себя ощущаешь сегодня?</string>
    <string name="zagolovok1">Заголовок блока</string>
    <string name="podblochnik1">Кратенькое описание \nблока с двумя строчками</string>
    <string name="butblock1">подробнее</string>
    <string name="zagolovok2">Заголовок блока</string>
    <string name="podblochnik2">Кратенькое описание \nблока с двумя строчками</string>
    <string name="butblock2">подробнее</string>
    <string name="menu">Тут будет меню</string>
    <string name="delete">удалить</string>
    <string name="close">закрыть</string>
    <string name="listening">Тут будет\nпрослушивание</string>
</resources>