<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondMainActivity"
    tools:layout_editor_absoluteX="someValue"
    tools:layout_editor_absoluteY="someValue">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1522dp"
        android:layout_height="1060dp"
        android:layout_marginStart="-340dp"
        android:layout_marginTop="-7dp"
        android:layout_marginEnd="-1049dp"
        android:layout_marginBottom="-25dp"
        android:background="#253334"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/pumpurumpumpum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="54dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="628dp"
        android:fontFamily="@font/alegreyaregular"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="405dp"
        android:layout_marginEnd="275dp"
        android:fontFamily="@font/alegreyasansmedium"
        android:text="@string/reg"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="298dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="240dp"
        android:backgroundTint="#7C9A92"
        android:bottomLeftRadius="1dp"
        android:bottomRightRadius="1dp"
        android:drawableTint="#6DAE81"
        android:foregroundTint="#6DAE81"
        android:radius="1dp"
        android:text="@string/b1"
        android:textColorLink="#6DAE81"
        android:textSize="17sp"
        android:topLeftRadius="1dp"
        android:topRightRadius="1dp"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#6DAE81" />

    <Button
        android:id="@+id/button2"
        android:layout_width="298dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="#7C9A92"
        android:bottomLeftRadius="1dp"
        android:bottomRightRadius="1dp"
        android:drawableTint="#6DAE81"
        android:foregroundTint="#6DAE81"
        android:radius="1dp"
        android:text="@string/b2"
        android:textColorLink="#6DAE81"
        android:textSize="17sp"
        android:topLeftRadius="1dp"
        android:topRightRadius="1dp"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#6DAE81" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="415dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edit1"
        android:textColor="#BEC2C2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edit2"
        android:textColor="#BEC2C2"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <ImageView
        android:layout_width="430dp"
        android:layout_height="430dp"
        android:layout_marginTop="600dp"
        android:src="@drawable/listya"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>